--- a/researchdiary_png.sty
+++ b/researchdiary_png.sty
@@ -42,6 +42,7 @@
 \definecolor{lightgray}{gray}{0.95}
 \usepackage[style=abnt]{biblatex}
 \usepackage{subfigure}
+\usepackage{array}
 \addbibresource{referencias.bib}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -59,7 +60,7 @@
 %%%%%%%%%%% HEADER / FOOTER %%%%%%%%%%%
 %\rhead{\workingDate}
 % Para trocar o logo, simplesmente faça upload e mude o nome da imagem usada no \includegraphics
-\lhead{\includegraphics[width=0.2\textwidth]{Agroparistech.png}}
+\lhead{\includegraphics[width=0.3\textwidth]{Agroparistech.png}}
 \chead{\textsc{IODAA}}
 \rhead{\textsc{\userName}}
 \rfoot{\textsc{\thepage}}
