--- a/researchdiary_png.sty
+++ b/researchdiary_png.sty
@@ -43,6 +43,8 @@
 \usepackage[style=abnt]{biblatex}
 \usepackage{subfigure}
 \usepackage{array}
+\usepackage[french,boxed,ruled,lined]{algorithm2e}
+
 \addbibresource{referencias.bib}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -64,7 +66,7 @@
 \chead{\textsc{IODAA}}
 \rhead{\textsc{\userName}}
 \rfoot{\textsc{\thepage}}
-\cfoot{\textit{Dernière modification : 17 Octobre 2022}}
+\cfoot{\textit{Dernière modification : 20 Octobre 2022}}
 \lfoot{\textsc{\institution}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
